--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@paypal/react-paypal-js": "^7.3.2",
+    "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
+    "js-cookie": "^3.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.2",
     "next": "11.1.0",
+    "next-connect": "^0.10.2",
+    "notistack": "^1.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.14.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
