--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "notistack": "^1.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.14.0"
+    "react-hook-form": "^7.14.0",
+    "sharp": "^0.29.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
