--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@paypal/react-paypal-js": "^7.3.2",
+    "@stripe/react-stripe-js": "^1.4.1",
+    "@stripe/stripe-js": "^1.17.1",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "js-cookie": "^3.0.0",
@@ -19,11 +21,15 @@
     "mongoose": "^6.0.2",
     "next": "11.1.0",
     "next-connect": "^0.10.2",
+    "nookies": "^2.5.2",
     "notistack": "^1.0.10",
+    "razorpay": "^2.0.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.14.0",
-    "sharp": "^0.29.0"
+    "sharp": "^0.29.0",
+    "shortid": "^2.2.16",
+    "stripe": "^8.171.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
